--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -20,11 +20,10 @@ jobs:
       run: |
         pnpm install
         pnpm build
-    - name: Deploy
-      uses: crazy-max/ghaction-github-pages@v2
+    - name: Upload artifact
+      uses: actions/upload-artifact@master
       with:
-        target_branch: gh-pages
-        build_dir: dist
-        fqdn: clash.razord.top
+        name: aa
+        path: dist
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
